# rtp

./: format.sh  hie.yaml
.github/workflows/: haskell.yml
rtp-opengl/: CHANGELOG.md  LICENSE  rtp-opengl.cabal
rtp-opengl/app/: Main.hs
rtp-opengl/shaders/: shader.vert
rtp-opengl/src/: RTP.hs
