cabal-version:       >=1.10
name:                rtp-opengl
version:             0.1.0.0
synopsis:            Real-Time Polygon Rendering
description:
  Real-Time Antialiased Polygon Rendering.
license:             BSD3
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable rtp-opengl
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
  -- hs-source-dirs:
  default-language:    Haskell2010
